--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,45 @@
 = Communications
 
-This project rocks and uses MIT-LICENSE.
+This gem provides tools for easy and painless two-sided communication between two rails applications
+
+= Usage
+
+The usage is simple:
+
+== Receiver App
+
+1. Configure receiver
+```
+Communications.configure do
+  handle :channel_name, with: SomeHandler
+
+  on_message_failure do |queue, payload, _|
+    Rails.logger.info 'Message processing error'
+  end
+end
+```
+
+2. Start the reciever
+```
+Communications::Receiver.start! rescue Bunny::TCPConnectionFailedForAllHosts
+```
+
+3. Implement Handler class
+```
+require 'communications/handler'
+
+class SomeHandler
+  include Communications::Handler
+
+  def handle(payload)
+    SomeWorker.do_something_with_payload(payload)
+  end
+end
+```
+
+== Transmitter App
+
+1. Publish message
+```
+Communications::Publisher.publish(:channel_name, message_hash)
+```
